--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,4 @@
-FROM servergurus/ubuntu-jdk8
-MAINTAINER Prasanjit Singh <nixgurus@gmail.com>
-
-# setup WildFly 
-COPY wildfly-8.2.0.Final /opt/wildfly
+FROM jboss/wildfly
 
 # install example app on wildfy
 COPY wildfly-spring-boot-sample-1.0.0.war /opt/wildfly/standalone/deployments/
